Some-Little-Update

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2013 - 2016</p>
+                    <p class="tl-duration">December, 2022 – present</p>
                     <h5>Chief Technical Officer<span> - <a href="https://www.craftspace.in">Craft Space</a></span></h5>
                     <p>
                         This is a E-Commerce Start-up , basically deals with Handy Crafts.
